Fix: Update remaining image paths to /images/ folder - Updated about-us.html: 7 team member and COP16 images - Updated sumate.html: 3 images for activismo, formacion, colaboracion - Updated dona.html: 1 Equipo KEF image - All images now reference /images/ (public folder) instead of /assets/images/

--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,7 @@
             </div>
             <div class="about-section">
                 <div class="about-us-image">
-                    <img src="/assets/images/COP16/PB8-2.jpeg">
+                    <img src="/images/COP16/PB8-2.jpeg">
                 </div>
             </div>
             <div class="about-section">
@@ -57,7 +57,7 @@
                 <div class="card-container">
                     <h2>Nuestro Equipo</h2>
                     <div class="card">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaH.jpeg">
+                        <img class="profile-photo" src="/images/Equipo KEF/CamilaH.jpeg">
                         <div class="about-us-card-text">
                             <h3>Maria Camila Hernández Ceballos - <a class="role-title">Cofundadora de KEF -
                                     Coordinadora de Formación y Acción Educativa</a></h3>
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="card typetwo">
-                        <img class="profile-photo alejandra" src="/assets/images/Equipo KEF/Alejandra.jpeg">
+                        <img class="profile-photo alejandra" src="/images/Equipo KEF/Alejandra.jpeg">
                         <div class="about-us-card-text">
                             <h3>Maria Alejandra Hernández Ceballos - <a class="role-title">Cofundadora de KEF -
                                     Coordinadora de Emprendimientos Ecofeministas</a></h3>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="profile-photo tatiana" src="/assets/images/Equipo KEF/Tatiana.jpeg">
+                        <img class="profile-photo tatiana" src="/images/Equipo KEF/Tatiana.jpeg">
                         <div class="about-us-card-text">
                             <h3>Tatiana Rosero González - <a class="role-title">Coordinadora de Activismo y Desarrollo
                                     Comunitario</a></h3>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="card typetwo">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaO.jpeg">
+                        <img class="profile-photo" src="/images/Equipo KEF/CamilaO.jpeg">
                         <div class="about-us-card-text">
                             <h3>Maria Camila Ordóñez - <a class="role-title">Equipo de Comunicación y Presencia
                                     Digital</a></h3>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/JULIAN_KEF.jpg">
+                        <img class="profile-photo" src="/images/Equipo KEF/JULIAN_KEF.jpg">
                         <div class="about-us-card-text">
                             <h3>Julian Amaya López - <a class="role-title">Equipo de Marketing y Diseño</a></h3>
                             <p>Colombiano de nacimiento, Caleño de corazón y Español por amor. Estudió marketing en
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="card typetwo">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/JAVIER_KEF.jpg">
+                        <img class="profile-photo" src="/images/Equipo KEF/JAVIER_KEF.jpg">
                         <div class="about-us-card-text">
                             <h3>Javier Núñez Jaimes - <a class="role-title">Equipo de Comunicación y Presencia
                                     Digital</a></h3>
