--- a/dona.html
+++ b/dona.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donaciones - Ropa y Contribuciones Financieras</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
 
     <load src="header.html" />
@@ -15,7 +17,8 @@
         <!-- Hero Section -->
         <section class="hero-content hero-donations">
             <h1>¿Cómo puedes apoyarnos?</h1>
-            <p>Puedes apoyarnos de dos formas: adquiriendo productos KEF hechos en colaboración con nuestras aliadas o donando ropa y/o útiles escolares para las comunidades de Juanchaco, Ladrilleros y la Barra.</p>
+            <p>Puedes apoyarnos de dos formas: adquiriendo productos KEF hechos en colaboración con nuestras aliadas o
+                donando ropa y/o útiles escolares para las comunidades de Juanchaco, Ladrilleros y la Barra.</p>
         </section>
 
         <!-- Clothing Donations Section -->
@@ -26,10 +29,13 @@
                     <h2>Productos KEF</h2>
                     <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas.</p>
                     <div class="donations-image">
-                        <img src="/assets/images/Equipo KEF/EquipoKEF.jpeg">
+                        <img src="/images/Equipo KEF/EquipoKEF.jpeg">
                     </div>
-                    <p>Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
-                    <p>Adquiere los productos KEF en nuestro <a href="/contact-us.html" class="tienda-kef-link">punto físico</a> o tienda virtual.</p>
+                    <p>Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le
+                        apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social,
+                        ambiental y de género.</p>
+                    <p>Adquiere los productos KEF en nuestro <a href="/contact-us.html" class="tienda-kef-link">punto
+                            físico</a> o tienda virtual.</p>
                     <a href="https://www.instagram.com/tienda_kef/" class="cta-button tienda-kef">Tienda KEF</a>
                 </div>
             </div>
@@ -41,8 +47,11 @@
                 <!-- Right Side: Text Content -->
                 <div class="donations-text">
                     <h2>Donaciones de ropa y/o útiles escolares</h2>
-                    <p>Dona ropa en excelente estado y/o útiles escolares a los <a class="juanchamigos" href="https://www.instagram.com/juanchamigoss">Juanchamigos</a></p>
-                    <p>Anualmente y con el apoyo de la Fundación Huaitoto, Coral Resort y Plástico Precioso Uramba se realizan 2 jornadas de intercambio de ropa y útiles escolares por plástico reciclado de las playas de Juanchaco, Ladrilleros y la Barra.</p> 
+                    <p>Dona ropa en excelente estado y/o útiles escolares a los <a class="juanchamigos"
+                            href="https://www.instagram.com/juanchamigoss">Juanchamigos</a></p>
+                    <p>Anualmente y con el apoyo de la Fundación Huaitoto, Coral Resort y Plástico Precioso Uramba se
+                        realizan 2 jornadas de intercambio de ropa y útiles escolares por plástico reciclado de las
+                        playas de Juanchaco, Ladrilleros y la Barra.</p>
                     <p>Súmate como voluntario o donante y haz esto posible.</p>
                     <a href="contact-us.html" class="cta-button">Más información</a>
                 </div>
@@ -52,4 +61,5 @@
     <load src="footer.html" />
 
 </body>
+
 </html>
