--- a/sumate.html
+++ b/sumate.html
@@ -30,7 +30,7 @@
     <section class="line-of-work">
         <div class="about-section">
             <div class="about-us-image">
-                <img src="/assets/images/8M-2025/8M254.jpg" alt="Marcha 8M KEF" loading="lazy">
+                <img src="/images/8M-2025/8M254.jpg" alt="Marcha 8M KEF" loading="lazy">
             </div>
         </div>
         <div class="line-of-work-card activismo">
@@ -57,7 +57,7 @@
         </div>
         <div class="about-section">
             <div class="about-us-image">
-                <img src="/assets/images/VocesValientes/Voces1-2.jpeg" alt="Taller Voces Valientes" loading="lazy">
+                <img src="/images/VocesValientes/Voces1-2.jpeg" alt="Taller Voces Valientes" loading="lazy">
             </div>
         </div>
     </section>
@@ -66,7 +66,7 @@
     <section class="line-of-work">
         <div class="about-section">
             <div class="about-us-image colaboracion">
-                <img src="/assets/images/COP16/PB4.jpeg" alt="Feria de Emprendimiento" loading="lazy">
+                <img src="/images/COP16/PB4.jpeg" alt="Feria de Emprendimiento" loading="lazy">
             </div>
         </div>
         <div class="line-of-work-card colaboracion">
