Fix: Update hero images in index.html to /images/ folder - Fixed EquipoKEF-2.jpeg path for hero section - Fixed 8M-2025.jpeg path and copied to public/images folder - All images now correctly reference /images/ for production

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <section class="full-section-wrapper main-hero-image" id="hero-image">
                         <!-- Bottom: Image or Design -->
                         <div>
-                            <img src="assets/images/Equipo KEF/EquipoKEF-2.jpeg" alt="Hero Image">
+                            <img src="/images/Equipo KEF/EquipoKEF-2.jpeg" alt="Hero Image">
                         </div>
                     </section>
                     <div class="main-hero-text second-text">
@@ -138,7 +138,7 @@
             </div>
             <div class="cta-image">
                 <a href="sumate.html">
-                    <img src="assets/8M-2025.jpeg" alt="KEF Team Image">
+                    <img src="/images/8M-2025.jpeg" alt="KEF Team Image">
                 </a>
             </div>
         </div>
