se eliminaron logos de Huaitoto Foundation y Sentires de Luna

--- a/consumo.html
+++ b/consumo.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumo Local y Consciente</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
     <!-- Header Section -->
     <load src="header.html" />
@@ -15,7 +17,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Colaboración</h1>
-                <p>En KEF celebramos el poder de los vínculos entre mujeres, y por eso queremos visibilizar tu emprendimiento, nutrirlo y hacerlo crecer contigo.</p>
+                <p>En KEF celebramos el poder de los vínculos entre mujeres, y por eso queremos visibilizar tu
+                    emprendimiento, nutrirlo y hacerlo crecer contigo.</p>
                 <a href="contact-us.html" class="cta-button-consumo">Contáctanos</a>
             </div>
         </div>
@@ -29,8 +32,6 @@
             <div class="logo"><img src="/assets/LogosAliadas/Logo de Féminas Iustradas.png" alt="Logo 6"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo De.Lu.jpeg" alt="Logo 7"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo Hilando Historias.jpg" alt="Logo 9"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/LOGO HÜAITOTO FOUNDATION_BLANCO TRANSPARENTE.png" alt="Logo 10"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/LOGO SENTIRES DE LUNA .jpeg" alt="Logo 12"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
             <div class="logo"><img src="/assets/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
@@ -42,17 +43,21 @@
             <img src="assets/images/Biofest2025/BF25.jpg" alt="Biofest2025">
         </div>
         <div class="colaboracion-cta-card">
-            <section class="blog-cta colaboracion">    
+            <section class="blog-cta colaboracion">
                 <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
                 <p>
-                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres colombianas.<br><br>
-                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
-                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador: social, ambiental y/o de género.
+                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres
+                    colombianas.<br><br>
+                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña
+                    escala y mediante procesos artesanales.<br><br>
+                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito
+                    transformador: social, ambiental y/o de género.
                 </p>
                 <h2 class="title-cta-colaboracion">¡Estas a punto de convertirte en una aliada KEF!</h2>
                 <div class="ctas-colaboracion">
                     <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
-                    <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo typetwo">Visita nuestra Tienda KEF</a>
+                    <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo typetwo">Visita nuestra
+                        Tienda KEF</a>
                 </div>
             </section>
         </div>
@@ -60,4 +65,5 @@
     <!-- Footer Section -->
     <load src="footer.html" />
 </body>
+
 </html>
