corrección de direcciones de la carpeta assets a public

--- a/activismo.html
+++ b/activismo.html
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Activismo - KEF">
     <meta property="og:description" content="Movilización y defensa de derechos humanos y ambientales.">
-    <meta property="og:image" content="https://kef.com/assets/KEF-LOGO.png">
-    <link rel="icon" type="image/png" href="assets/KEF-LOGO.png">
+    <meta property="og:image" content="https://kef.com/images/KEF-LOGO.png">
+    <link rel="icon" type="image/png" href="/images/KEF-LOGO.png">
     <title>Activismo - KEF</title>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
