--- a/consumo.html
+++ b/consumo.html
@@ -26,31 +26,31 @@
     <div class="colaboracion-section">
         <h1>Nuestras Aliadas</h1>
         <div class="logo-container">
-            <div class="logo"><img src="/assets/LogosAliadas/Ecolunas sin fondo.png" alt="Logo 1"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo AIZU .png" alt="Logo 2"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/LOGO AUDE.png" alt="Logo 5"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo de Féminas Iustradas.png" alt="Logo 6"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo De.Lu.jpeg" alt="Logo 7"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo Hilando Historias.jpg" alt="Logo 9"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Ecolunas sin fondo.png" alt="Logo 1"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo AIZU .png" alt="Logo 2"></div>
+            <div class="logo"><img src="/images/LogosAliadas/LOGO AUDE.png" alt="Logo 5"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo de Féminas Iustradas.png" alt="Logo 6"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo De.Lu.jpeg" alt="Logo 7"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo Hilando Historias.jpg" alt="Logo 9"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
+            <div class="logo"><img src="/images/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
         </div>
     </div>
     <!-- Blog CTA -->
     <div class="colaboracion-cta-container">
         <div class="colaboracion-cta-image">
-            <img src="assets/images/Biofest2025/BF25.jpg" alt="Biofest2025">
+            <img src="/images/Biofest2025/BF25.jpg" alt="Biofest2025">
         </div>
         <div class="colaboracion-cta-card">
             <section class="blog-cta colaboracion">
                 <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
                 <p>
-                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres
+                    <img class="green-leaf-bullet" src="/images/icons/verde.png"> Estar liderado y/o creado por mujeres
                     colombianas.<br><br>
-                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña
+                    <img class="green-leaf-bullet" src="/images/icons/verde.png"> Los productos son elaborados a pequeña
                     escala y mediante procesos artesanales.<br><br>
-                    <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito
+                    <img class="green-leaf-bullet" src="/images/icons/verde.png"> Cada producto tiene un propósito
                     transformador: social, ambiental y/o de género.
                 </p>
                 <h2 class="title-cta-colaboracion">¡Estas a punto de convertirte en una aliada KEF!</h2>
