--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="KEF - Komunidad Eco Feminista">
     <meta property="og:description"
         content="Impulsamos la equidad de género y la justicia ambiental en Cali y el Pacífico Colombiano.">
-    <meta property="og:image" content="https://kef.com/assets/KEF-LOGO.png">
-    <link rel="icon" type="image/png" href="assets/KEF-LOGO.png">
+    <meta property="og:image" content="https://kef.com/images/KEF-LOGO.png">
+    <link rel="icon" type="image/png" href="/images/KEF-LOGO.png">
     <title>KEF - Komunidad Eco Feminista</title>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" defer>
@@ -51,10 +51,10 @@
                         <div class="main-hero-social-container">
                             <div class="footer-social social-hero">
                                 <a href="https://www.instagram.com/comunidad_kef/" target="_blank">
-                                    <img src="assets/icons/instagram-icon.svg" alt="Instagram">
+                                    <img src="/images/icons/instagram-icon.svg" alt="Instagram">
                                 </a>
                                 <a href="https://www.tiktok.com/@kef.cali" target="_blank">
-                                    <img src="assets/icons/tiktok-icon.svg" alt="TikTok">
+                                    <img src="/images/icons/tiktok-icon.svg" alt="TikTok">
                                 </a>
                             </div>
                         </div>
