--- a/about-us.html
+++ b/about-us.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Conócenos - KEF">
     <meta property="og:description"
         content="Nuestra historia: De dos iniciativas independientes a una comunidad ecofeminista unida.">
-    <meta property="og:image" content="https://kef.com/assets/KEF-LOGO.png">
-    <link rel="icon" type="image/png" href="assets/KEF-LOGO.png">
+    <meta property="og:image" content="https://kef.com/images/KEF-LOGO.png">
+    <link rel="icon" type="image/png" href="/images/KEF-LOGO.png">
     <title>Conócenos - KEF</title>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
