--- a/contact-us.html
+++ b/contact-us.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Contáctanos - KEF">
     <meta property="og:description"
         content="¿Tienes dudas o quieres unirte? Contáctanos o visítanos en nuestra sede en Cali.">
-    <meta property="og:image" content="https://kef.com/assets/KEF-LOGO.png">
-    <link rel="icon" type="image/png" href="assets/KEF-LOGO.png">
+    <meta property="og:image" content="https://kef.com/images/KEF-LOGO.png">
+    <link rel="icon" type="image/png" href="/images/KEF-LOGO.png">
     <title>Contáctanos - KEF</title>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
