--- a/sumate.html
+++ b/sumate.html
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Súmate a KEF - Komunidad Eco Feminista">
     <meta property="og:description" content="Únete al activismo, formación y colaboración ecofeminista en Cali.">
-    <meta property="og:image" content="https://kef.com/assets/KEF-LOGO.png">
-    <link rel="icon" type="image/png" href="assets/KEF-LOGO.png">
+    <meta property="og:image" content="https://kef.com/images/KEF-LOGO.png">
+    <link rel="icon" type="image/png" href="/images/KEF-LOGO.png">
     <title>KEF - Komunidad Eco Feminista</title>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
