se agregó el logo de Colibrí de Luna

--- a/consumo.html
+++ b/consumo.html
@@ -35,6 +35,7 @@
             <div class="logo"><img src="/images/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
             <div class="logo"><img src="/images/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
             <div class="logo"><img src="/images/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
+            <div class="logo"><img src="/images/LogosAliadas/Colibrí de Luna.png" alt="Logo 16"></div>
         </div>
     </div>
     <!-- Blog CTA -->
